# openai-transcription

./: .gitignore  pyproject.toml  transcribe.py
